# backend/internal/core/auth/dto.go
@@ -6,8 +6,13 @@ import (
 )
 
 type TelegramLoginRequest struct {
-	IDToken *string `json:"id_token" validate:"required"`
-	Nonce   *string `json:"nonce"`
+	ProviderUserID string  `json:"provider_user_id" validate:"required"`
+	Username       *string `json:"username"`
+	FirstName      *string `json:"first_name"`
+	LastName       *string `json:"last_name"`
+	PhotoURL       *string `json:"photo_url"`
+	AuthDate       int64   `json:"auth_date"`
+	Hash           *string `json:"hash"`
 }
 
 type YandexLoginRequest struct {
